--- a/index.html
+++ b/index.html
@@ -222,9 +222,9 @@
                     </ul>
                 </div>
                 <div class="skills__inner">
-                    <p class="skills__text">Se que la mejor forma de demostrar experiencia es a travez de proyectos,
+                    <p class="skills__text">Se que la mejor forma de demostrar experiencia es a través de proyectos,
                         pero esto
-                        no implica que los certificados que podamos obtener en plataformas educativas no sean validos,
+                        no implica que los certificados que podamos obtener en plataformas educativas no sean válidos,
                         asi que
                         les dejo el link a mis certificados de <a href="https://www.freecodecamp.org/" target="_blank"
                             class="skills__link">freeCodeCamp</a>:</p>
@@ -257,11 +257,11 @@
                         <p class="decorator">Feature Project</p>
                         <h3 class="portfolio__subtitle">Loop Studios Landing Page</h3>
                         <p class="portfolio__text">
-                            La pagina Loops studio es una landing page que tiene un diseño RESPONSIVE [MOBILE FIRST].
-                            Las tecnologias usadas para su creacion han sido HTML, SASS y JS.
+                            La página Loops studio es una landing page que tiene un diseño RESPONSIVE [MOBILE FIRST].
+                            Las tecnologías usadas para su creación han sido HTML, SASS y JS.
                         </p>
                         <p class="portfolio__text">
-                            Para su maquetacion he utilizado FLEXBOX y GRID.
+                            Para su maquetación he utilizado FLEXBOX y GRID.
                         </p>
                         <ul class="portfolio__techList">
                             <li class="portfolio__techItem">
@@ -309,13 +309,13 @@
                         <p class="decorator">Feature Project</p>
                         <h3 class="portfolio__subtitle">Calculator</h3>
                         <p class="portfolio__text">
-                            El enfonque principal de este proyecto es el uso de JS, cuenta con un boton que permite
+                            El enfonque principal de este proyecto, es el uso de JS además cuenta con un boton que permite
                             cambiar los temas de
                             colores de 3 maneras distintas.
                         </p>
                         <p class="portfolio__text">
-                            Al igual que todos mis proyectos tiene un diseño responsive y una maquetacion relativamente
-                            facil gracias a la metodologia BEM.
+                            Al igual que todos mis proyectos tiene un diseño responsive y una maquetación relativamente
+                            fácil gracias a la metodología BEM.
                         </p>
                         <ul class="portfolio__techList">
                             <li class="portfolio__techItem">
@@ -363,7 +363,7 @@
                         <p class="decorator">Feature Project</p>
                         <h3 class="portfolio__subtitle">Pricing Component</h3>
                         <p class="portfolio__text">
-                            El proyecto Pricing Component cuenta con un toggler buttom que permite cambiar el precio del
+                            El proyecto Pricing Component cuenta con un toggler buttom, que permite cambiar el precio del
                             servicio dependiendo del plan que elijas.
                         </p>
                         <p class="portfolio__text">
