--- a/index.html
+++ b/index.html
@@ -260,9 +260,6 @@
                             La página Loops studio es una landing page que tiene un diseño RESPONSIVE [MOBILE FIRST].
                             Las tecnologías usadas para su creación han sido HTML, SASS y JS.
                         </p>
-                        <p class="portfolio__text">
-                            Para su maquetación he utilizado FLEXBOX y GRID.
-                        </p>
                         <ul class="portfolio__techList">
                             <li class="portfolio__techItem">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="portfolio__techIcon" viewBox="0 0 24 24"
@@ -309,13 +306,11 @@
                         <p class="decorator">Feature Project</p>
                         <h3 class="portfolio__subtitle">Calculator</h3>
                         <p class="portfolio__text">
-                            El enfonque principal de este proyecto, es el uso de JS además cuenta con un boton que permite
-                            cambiar los temas de
-                            colores de 3 maneras distintas.
-                        </p>
-                        <p class="portfolio__text">
-                            Al igual que todos mis proyectos tiene un diseño responsive y una maquetación relativamente
-                            fácil gracias a la metodología BEM.
+                            El enfoque principal de este proyecto es el uso de
+                            la api DOM de JavaScript, las tecnologías usadas
+                            para su desarrollo son HTML, CSS, BEM y JS DOM.
+                            Cuenta con un diseño responsive y esta
+                            maquetado con GRID CSS.
                         </p>
                         <ul class="portfolio__techList">
                             <li class="portfolio__techItem">
@@ -363,11 +358,7 @@
                         <p class="decorator">Feature Project</p>
                         <h3 class="portfolio__subtitle">Pricing Component</h3>
                         <p class="portfolio__text">
-                            El proyecto Pricing Component cuenta con un toggler buttom, que permite cambiar el precio del
-                            servicio dependiendo del plan que elijas.
-                        </p>
-                        <p class="portfolio__text">
-                            Este proyecto esta maquetado completamente con GRID.
+                            El proyecto Pricing Component cuenta con una maquetación responsive gracias a GRID CSS, además tiene un botón que esta programado con JavaScript el cual permite cambiar los precios dependiendo si la suscripción es anual o mensual.
                         </p>
                         <ul class="portfolio__techList">
                             <!-- <li class="portfolio__techItem">Technologies</li> -->
